--- a/packages/site/src/styles/global.css
+++ b/packages/site/src/styles/global.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
 @layer base {
   :root {
     --background: 0 0% 100%;
